<resources>
    <string name="app_name">기린바구니</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">개설과목</string>
    <string name="tab_text_2">시간표</string>
    <string name="search_text_1">강의명</string>
    <string name="search_text_2">학과</string>
    <string name="search_text_3">학년</string>
    <string name="search_text_4">초기화</string>
    <string name="search_text_5">취소</string>
    <string name="search_text_6">확인</string>
    <string name="search_text_7">사이버 강의 여부</string>
    <string-array name="header_title">
        <item></item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
        <item>사이버</item>
    </string-array>
    <string name="admob_app_id">ca-app-pub-9700414008733720~8736405806</string>
    <string name="admob_app_unit_id">ca-app-pub-9700414008733720/2526220676</string>
    <string name="btn_subject_item_text">담기</string>
    <string name="nav_header_email">EMail</string>
    <string name="nav_header_name">NAME</string>
    <string name="nav_header_profile">image_profile</string>
    <string name="bugreport_1">
        안녕하세요.\n
        기린바구니 입니다.\n
        무엇을 도와드릴까요?\n

    </string>
    <string name="bugreport_2">메일 문의하기</string>
    <string name="bugreport_3">카카오톡 오픈채팅 문의하기</string>
    <string name="timetable_license_title">● Timetable</string>
    <string name="timetable_license">
        Copyright 2019 tlaabs\n\n

        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at\n\n

        http://www.apache.org/licenses/LICENSE-2.0\n\n

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.</string>
    <string name="Retrofit2_license_title">● Retrofit2</string>
    <string name="Retrofit2_license">
        Copyright 2013 Square, Inc.\n\n

        Licensed under the Apache License, Version 2.0 (the "License");
        you may not use this file except in compliance with the License.
        You may obtain a copy of the License at\n\n

        http://www.apache.org/licenses/LICENSE-2.0\n\n

        Unless required by applicable law or agreed to in writing, software
        distributed under the License is distributed on an "AS IS" BASIS,
        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
        See the License for the specific language governing permissions and
        limitations under the License.</string>
    <string name="back_button_message">"'뒤로' 버튼을 한번 더 누르시면 종료됩니다."</string>
    <string name="logout_message">성공적으로 로그아웃 되었습니다.</string>
    <string name="loading_update_title">업데이트 알림</string>
    <string name="loading_update_content">최신버전이 등록되었습니다. \n업데이트 하세요.</string>
    <string name="subject_check_timetable">"사간을 확인 중 입니다."</string>
    <string name="subject_success_timetable">시간표 성공</string>
    <string name="subject_overlap_timetable">원하는 시간에 강의가 있습니다.</string>
    <string name="timetable_dialog_title">삭제하시겠습니까?</string>
    <string name="nav_notice_title">기린바구니 공지사항</string>
    <string name="nav_bug_title">기린바구니 버그리포트</string>
    <string name="nav_bug_email">wkdgml96@dhu.ac.kr</string>
</resources>